Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-259

Several appenders fail to compile in Visual Studio 2008

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Appender
    • None
    • Visual Studio 2008 on Windows Vista

    Description

      After an update on March 28th, the files socketappender.cpp, sockethubappender.cpp, socketoutputstream.cpp, and xmlsocketappender.cpp no longer compile. Compiling errors occur on the same section of boilerplate code:

      protected:
      LOG4CXX_LIST_DEF(ByteList, char); // Error occurs within the code generated from this MACRO
      ByteList array;
      SocketPtr socket;

      Error Log:

      >Compiling...
      3>socketappender.cpp
      3>z:\projects\Cerberus\log4cxx\src\main\include\log4cxx/helpers/socketoutputstream.h(53) : error C2960: 'std::allocator<_Ty>' : inconsistent explicit instantiations, a previous explicit instantiation specified 'extern template'
      3> with
      3> [
      3> _Ty=char
      3> ]
      3>sockethubappender.cpp
      3>z:\projects\Cerberus\log4cxx\src\main\include\log4cxx/helpers/socketoutputstream.h(53) : error C2960: 'std::allocator<_Ty>' : inconsistent explicit instantiations, a previous explicit instantiation specified 'extern template'
      3> with
      3> [
      3> _Ty=char
      3> ]
      3>socketoutputstream.cpp
      3>z:\projects\Cerberus\log4cxx\src\main\include\log4cxx/helpers/socketoutputstream.h(53) : error C2960: 'std::allocator<_Ty>' : inconsistent explicit instantiations, a previous explicit instantiation specified 'extern template'
      3> with
      3> [
      3> _Ty=char
      3> ]
      3>xmlsocketappender.cpp
      3>z:\projects\Cerberus\log4cxx\src\main\include\log4cxx/helpers/socketoutputstream.h(53) : error C2960: 'std::allocator<_Ty>' : inconsistent explicit instantiations, a previous explicit instantiation specified 'extern template'
      3> with
      3> [
      3> _Ty=char
      3> ]

      Thanks,
      Grant Averett

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            serin13 Grant Averett
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0.5h
                0.5h
                Remaining:
                Remaining Estimate - 0.5h
                0.5h
                Logged:
                Time Spent - Not Specified
                Not Specified