LOGCXX-259: Several appenders fail to compile with VC8